#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-07
2020-02-22 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_23 from cpo

Tag: V02-00-06
2020-02-22 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_22 from Silke & Lennart

Tag: V02-00-05
2020-02-17 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_16 from Silke common mode
- UtilsJungfrau.pyhrows = 256 #512/2 -> float in new compiler

Tag: V02-00-04
2020-02-03 Mikhail Dubrovin
- add issue_2021_02_02 in examples/test-issues-2021.py
- src/UtilsEpix10kaCalib.py - fix issue with new python compiler

Tag: V02-00-03
2020-01-26 Mikhail Dubrovin
- src/UtilsEpix10ka.py fix undefined gr0 - issue reported by Silke

2020-01-14 Mikhail Dubrovin
- fix new c++ compiler minor complains
	modified:   include/NDArrProducerAndor.h
	modified:   src/NDArrProducerAndor.cpp

Tag: V02-00-02
2020-01-14 Mikhail Dubrovin
- updarte and rename examples/test-issues-2021.py

Tag: V02-00-01
2020-01-13 Mikhail Dubrovin
- fix issue with float index, minor refactoring in parameters
	modified:   src/UtilsEpix10ka.py
	new file:   examples/test-2021-01-12-velerio-float-index.py

Tag: V02-00-00 Valerio py2->py3
Tag: V01-02-00 Valerio py2->py3

Tag: V01-01-01
2020-12-11 Mikhail S. Dubrovin
- propagate npix_min=10, apply cm corr by mask only
	modified:   src/UtilsCommonMode.py
	modified:   src/UtilsEpix10ka.py
	modified:   src/UtilsJungfrau.py
	modified:   app/epix10ka_images
	modified:   app/jungfrau_images

Tag: V01-00-99
2020-12-10 Mikhail S. Dubrovin
- implement full scale common mode correction for Jungfrau and epix10ka detectors
	modified:   src/AreaDetector.py
	modified:   src/UtilsCommonMode.py