@@ -7,8 +7,15 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-08
+2020-03-01 Mikhail Dubrovin
+- for EPIX10KA all 2d arrays are re-shaped to 3d
+- examples/test-issues-2021.py - add issue_2021_03_01 from silke
+- src/AreaDetector.py - for EPIX10KA all 2d arrays are re-shaped to 3d
+- src/UtilsEpix10ka.py
+
 Tag: V02-00-07
-2020-02-22 Mikhail Dubrovin
+2020-03-01 Mikhail Dubrovin
 - examples/test-issues-2021.py - add issue_2021_02_23 from cpo
 
 Tag: V02-00-06
